# mirsad

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/clean-repo/: README.md
examples/hostile-repo/: .env.example  AGENTS.md  mcp.json
examples/hostile-repo/.cursor/rules/: deploy.md
examples/hostile-repo/docs/: setup.md
src/mirsad/: __init__.py  cli.py  models.py  reporters.py  rules.py  scanner.py
tests/: test_cli.py  test_scanner.py
