[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirsad"
version = "0.1.0"
description = "Pre-agent security check for hostile repository instructions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "gqnxx" }]
keywords = ["security", "ai-agents", "prompt-injection", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
mirsad = "mirsad.cli:main"
agent-intake = "mirsad.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.urls]
Repository = "https://github.com/gqnxx/mirsad"
Issues = "https://github.com/gqnxx/mirsad/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mirsad"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
